Can bring up four gnomes on game start and a random target, need to make images responsive and update values to current value

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
     <div class="start">
         <button type = "button" id = "button">Get Nabbin'!</button>
     </div>
-    <div id="gnomes"></div>
-    <div id="marketvalue">Current Market Value:
+    <div id="gnomes">
+    </div>
+    <div id="marketvalue">
+        <p>Current Market Value:
         <span id="currentvalue"></span>
+        </p>
+        <p>Collected Gnome Value: <span id="gnomeValue"></span></p>
     </div>
     <div id="wins-and-losses">
         <p>Wins:
@@ -36,7 +40,6 @@
         <p>Losses:
             <span id="losses"></span></p>
     </div>
-    <div id="gnomes"></div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
